fix index file placement

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <link rel="icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div class="top-container">
@@ -29,11 +26,8 @@
       <div class="profile">
         <!-- <img class = "pfp" src="images/kai.png" alt=""> -->
         <h2>Hello.</h2>
-        <p>
-          I am a first-year Computer Science Student and University of
-          California, Irvine.
-        </p>
-        <img class="uci-pic" src="/my_site/images/uci.png" alt="" />
+        <p>I am a first-year Computer Science Student and University of California, Irvine.</p>
+        <img class="uci-pic" src="images/uci.png" alt="" />
       </div>
 
       <hr />
@@ -65,22 +59,11 @@
     </div>
 
     <div class="bottom-container">
-      <a
-        class="footer-link"
-        href="https://www.linkedin.com/in/dang-nguyen-39b481223/"
-      >
-        <img
-          class="footer-pic"
-          src="/my_site/images/linkedin.png"
-          alt="linkedin"
-        />
+      <a class="footer-link" href="https://www.linkedin.com/in/dang-nguyen-39b481223/">
+        <img class="footer-pic" src="images/linkedin.png" alt="linkedin" />
       </a>
       <a class="footer-link" href="https://www.instagram.com/nwin.nwin/">
-        <img
-          class="footer-pic"
-          src="/my_site/images/insta.png"
-          alt="instagram"
-        />
+        <img class="footer-pic" src="images/insta.png" alt="instagram" />
       </a>
 
       <a href="https://github.com/NwinNwin">
